# hookline

./: .gitignore  Cargo.toml  readme.md  shell.nix  test.sh
.github/workflows/: build.yml
src/: hookline.rs  index.html  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/hookline/: api.rs  music.rs  ui.rs
