[package]
name = "hookline"
version = "0.1.0"
edition = "2024"

[dependencies]
authentic = { version = "0.5.0", features = ["jwt", "step", "reqwest-blocking"] }
eframe = "0.30.0"
egui_extras = "0.30.0"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = "1.0.216"
serde_json = "1.0.134"
